--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,23 @@
             "email": "gt720@yandex.ru"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "Framework\\": "src/"
+        },
+        "files":[
+            "functions.php"
+        ]
+    },
     "require": {
-        "illuminate/container": "^5.8"
+        "illuminate/container": "^5.8",
+        "symfony/http-kernel": "^4.3",
+        "aura/router": "^3.1",
+        "zendframework/zend-diactoros": "^2.1",
+        "symfony/var-dumper": "^4.3"
+    },
+    "scripts": {
+        "serve": "php -S 0.0.0.0:8080 -t public"
     }
 }
