add twig, admin page and task page, sorting

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "symfony/http-kernel": "^4.3",
         "aura/router": "^3.1",
         "zendframework/zend-diactoros": "^2.1",
-        "symfony/var-dumper": "^4.3"
+        "symfony/var-dumper": "^4.3",
+        "twig/twig": "^2.11",
+        "zendframework/zend-httphandlerrunner": "^1.1",
+        "illuminate/database": "^5.8"
     },
     "scripts": {
         "serve": "php -S 0.0.0.0:8080 -t public"
