--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/var-dumper": "^4.3",
         "twig/twig": "^2.11",
         "zendframework/zend-httphandlerrunner": "^1.1",
-        "illuminate/database": "^5.8"
+        "illuminate/database": "^5.8",
+        "illuminate/pagination": "^5.8"
     },
     "scripts": {
         "serve": "php -S 0.0.0.0:8080 -t public"
